--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -22,6 +22,10 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                         </collectionViewFlowLayout>
+                        <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="Zhf-VO-Zgz">
+                            <rect key="frame" x="0.0" y="-64" width="320" height="568"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </activityIndicatorView>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="user" id="3Ce-fV-QIy" customClass="UserCollectionViewCell" customModule="Lessons_3_02_04_Networking" customModuleProvider="target">
                                 <rect key="frame" x="10" y="20" width="300" height="128"/>
@@ -78,6 +82,7 @@
                     </collectionView>
                     <navigationItem key="navigationItem" title="Contractors" id="HDh-ER-m9p"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Zhf-VO-Zgz" id="Wl9-uK-nvW"/>
                         <outlet property="userCollectionView" destination="OIL-8G-eyx" id="yFh-mI-jXx"/>
                     </connections>
                 </collectionViewController>
