--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                             <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                         </collectionViewFlowLayout>
                         <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="Zhf-VO-Zgz">
-                            <rect key="frame" x="0.0" y="-64" width="320" height="568"/>
+                            <rect key="frame" x="0.0" y="-70" width="320" height="568"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
                         <cells>
@@ -130,7 +130,7 @@
             </objects>
             <point key="canvasLocation" x="2514" y="-8"/>
         </scene>
-        <!--Contracts Table View Controller-->
+        <!--Contracts-->
         <scene sceneID="PJe-6J-A29">
             <objects>
                 <tableViewController storyboardIdentifier="contractsVC" id="TO8-06-wze" customClass="ContractsTableViewController" customModule="Lessons_3_02_04_Networking" customModuleProvider="target" sceneMemberID="viewController">
@@ -162,10 +162,13 @@
                             <outlet property="delegate" destination="TO8-06-wze" id="S0N-KF-Awp"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Contracts" id="a7N-od-WJf">
+                        <barButtonItem key="rightBarButtonItem" title="Add Contract" id="uPQ-tz-Mnh"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hil-hY-uKz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3274" y="-8"/>
+            <point key="canvasLocation" x="4022" y="0.0"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wUf-Dw-obb">
@@ -184,6 +187,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Xr-iy-HAO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="846.56488549618314" y="-8.4507042253521139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3hc-C5-LIH">
+            <objects>
+                <navigationController storyboardIdentifier="contractsNavVC" automaticallyAdjustsScrollViewInsets="NO" id="YiG-wo-Dbh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HlW-cb-00e">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TO8-06-wze" kind="relationship" relationship="rootViewController" id="TxI-b0-j3V"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hPt-j1-f79" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3257" y="0.0"/>
         </scene>
     </scenes>
     <resources>
