--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -162,17 +162,12 @@
                             <outlet property="delegate" destination="TO8-06-wze" id="S0N-KF-Awp"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Contracts" id="a7N-od-WJf">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="uPQ-tz-Mnh">
-                            <connections>
-                                <action selector="addContractTapped:" destination="TO8-06-wze" id="9GB-TR-7Hy"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <tabBarItem key="tabBarItem" title="Contracts" image="doc.on.doc.fill" catalog="system" id="riI-qR-BQ4"/>
+                    <navigationItem key="navigationItem" title="Contracts" id="a7N-od-WJf"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hil-hY-uKz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4022" y="0.0"/>
+            <point key="canvasLocation" x="4131" y="-280"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wUf-Dw-obb">
@@ -192,25 +187,7 @@
             </objects>
             <point key="canvasLocation" x="846.56488549618314" y="-8.4507042253521139"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="3hc-C5-LIH">
-            <objects>
-                <navigationController storyboardIdentifier="ContractsNavVC" automaticallyAdjustsScrollViewInsets="NO" id="YiG-wo-Dbh" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HlW-cb-00e">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="TO8-06-wze" kind="relationship" relationship="rootViewController" id="TxI-b0-j3V"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hPt-j1-f79" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3257" y="0.0"/>
-        </scene>
-        <!--Agreement-->
+        <!--Contract Text Table View Controller-->
         <scene sceneID="vQn-0G-zXZ">
             <objects>
                 <tableViewController storyboardIdentifier="ContractTextVC" id="tFm-P9-EMU" customClass="ContractTextTableViewController" customModule="Lessons_3_02_04_Networking" customModuleProvider="target" sceneMemberID="viewController">
@@ -242,11 +219,11 @@
                             <outlet property="delegate" destination="tFm-P9-EMU" id="mVA-pu-5dV"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Agreement" image="doc.text.fill" catalog="system" id="Fjf-hW-qBv"/>
+                    <navigationItem key="navigationItem" id="5vT-vV-vZF"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IPG-B0-eeQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5595" y="-466"/>
+            <point key="canvasLocation" x="5751" y="-8"/>
         </scene>
         <!--Works-->
         <scene sceneID="Llo-gU-JMB">
@@ -284,7 +261,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8uf-ri-duQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5595" y="360"/>
+            <point key="canvasLocation" x="4131" y="431"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="5Zp-3u-nsN">
@@ -297,16 +274,36 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="tFm-P9-EMU" kind="relationship" relationship="viewControllers" id="qLE-yb-mpX"/>
-                        <segue destination="Vvm-TZ-jS2" kind="relationship" relationship="viewControllers" id="AjY-GQ-8S4"/>
+                        <segue destination="TO8-06-wze" kind="relationship" relationship="viewControllers" id="wpb-2t-9fG"/>
+                        <segue destination="Vvm-TZ-jS2" kind="relationship" relationship="viewControllers" id="McH-mn-BIy"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ry-sa-38b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4768" y="-8"/>
+            <point key="canvasLocation" x="3289" y="-8"/>
+        </scene>
+        <!--Agreement-->
+        <scene sceneID="BMu-gv-ptT">
+            <objects>
+                <navigationController storyboardIdentifier="ContractsNavVC" automaticallyAdjustsScrollViewInsets="NO" id="0R6-WQ-zsG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Agreement" image="doc.text.fill" catalog="system" id="Fjf-hW-qBv"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xkm-NM-gyQ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tFm-P9-EMU" kind="relationship" relationship="rootViewController" id="HGr-2j-qMM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0HQ-aS-L7S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4903" y="-8"/>
         </scene>
     </scenes>
     <resources>
+        <image name="doc.on.doc.fill" catalog="system" width="116" height="128"/>
         <image name="doc.text.fill" catalog="system" width="115" height="128"/>
         <image name="list.bullet.clipboard.fill" catalog="system" width="103" height="128"/>
         <systemColor name="systemBackgroundColor">
