--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -316,7 +316,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Si vis pacem para belum." textAlignment="natural" layoutManager="textKit1" translatesAutoresizingMaskIntoConstraints="NO" id="poP-Ac-cPt">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Si vis pacem para bellum." textAlignment="natural" layoutManager="textKit1" translatesAutoresizingMaskIntoConstraints="NO" id="poP-Ac-cPt">
                                 <rect key="frame" x="16" y="76" width="288" height="452"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
